# del-simulator

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
data/experiments/example/: config.yaml  config_no_yield_noise.yaml  ntc_affinity_params.yaml
data/experiments/example/inference/: 2024.01_Enamine_REAL_10k_smiles.csv  affinity_seh_512_10k.csv  featurize_screening_set.yaml
data/experiments/example/reference_affinities/: seh_binding_db.csv
data/experiments/paper/main/: mk14_affinity_params.yaml  readout_runs.yaml  seh_affinity_params.yaml
data/experiments/paper/main/inference/: affinity_config_enamine_maccs.yaml  affinity_config_enamine_morgan.yaml  featurize_screening_set.yaml
data/experiments/paper/main/lib_a1_9_2/: config.yaml
data/experiments/paper/main/lib_a1_unity/: config.yaml
data/experiments/paper/main/lib_a2_1_1/: config.yaml  (+1 more)
del_simulator/: affinity_calculator.py  core.py  library_generator.py  ml_models.py  reaction_graph.py  readout.py  selection.py  yield_generator.py
del_simulator/utils/: aggregation_utils.py  metrics.py  utils.py
notebooks/: paper_figures.ipynb
notebooks/styles/: matplotlibrc.txt  matplotlibrc_fonts.txt
scripts/: featurize_dataset.py  generate_affinities.py  generate_library.py  prep_data.py  selection_and_readout.py  training_and_inference.py
tests/: test_affinity_calculator.py  test_aggregation_utils.py  test_core_config.py  test_library_generator.py  test_library_with_affinities.py  test_metrics.py  test_ml_models.py  test_reaction_graph.py  test_readout.py  test_scripts.py  test_selection.py  test_utils.py  test_yield_generator.py
tests/resources/: affinities.csv  bbs0.json  bbs1.json  branched_bbs.json  branched_dag.json  branched_output.csv  dag0.json  dag0_bbs0_output.csv  dag0_bbs0_output_affinities.csv  dag1.json  dag1_bbs1_output.csv
(+1827 files in other folders)
