[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "del-simulator"
version = "0.1.0"
description = "An in-silico simulator of DNA-encoded library (DEL) screening and analysis"
authors = ["Team <team@postera.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "<2.0.0"
pandas = "^1.5.1"
scikit-learn = "^1.2.1"
jupyter-black = "^0.3.3"
pip = "^23.1.2"
rdkit = "^2023.3.2"
ipykernel = "^6.24.0"
tqdm = "^4.62.3"
networkx = "^2.6.3"
pydantic = "^2.5.2"
pandarallel = "^1.6.5"
omegaconf = "^2.3.0"
chembl-structure-pipeline = "^1.2.2"
chemprop = "2.1.1"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
